Simple communication from content-script to background script

--- a/extension/package.json
+++ b/extension/package.json
@@ -30,10 +30,13 @@
     "@angular/cli": "~7.3.1",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
     "@types/chrome": "^0.0.80",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "babelify": "^10.0.0",
     "browserify": "^16.2.3",
     "codelyzer": "~4.5.0",
     "gulp": "^4.0.0",
