--- a/extension/src/config/chrome/manifest.json
+++ b/extension/src/config/chrome/manifest.json
@@ -21,5 +21,8 @@
       "js": ["content-script.js"]
     }
   ],
+  "background": {
+    "scripts": ["background.js"]
+  },
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
